EV-284 video on firefox repaired

--- a/wp-content/themes/event-shares/pagebox/modules/video_and_text/scss/module.scss
+++ b/wp-content/themes/event-shares/pagebox/modules/video_and_text/scss/module.scss
@@ -53,6 +53,11 @@
         width: 100%;
         height: 100%;
 
+        @-moz-document url-prefix() {
+          height: 49vh;
+          position: static;
+        }
+
       }
     }
 
